--- a/about.html
+++ b/about.html
@@ -17,6 +17,8 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="CSS/">
+        <!--Font Awesome-->
+        <script src="https://kit.fontawesome.com/aedad9e636.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
