--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="CSS/style.css">
+        <!--Font Awesome-->
+        <script src="https://kit.fontawesome.com/aedad9e636.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -28,8 +31,8 @@
            <div class="container">
             <div class="row mt-5">
                 <div class="col-4">
-                    <h1>service</h1>
-                    <h1>specialties</h1>
+                    <h6 class="sous-titre1">service</h6>
+                    <h1 class="titre1">specialties</h1>
                 </div>
                 <div class="col-6">
                     <p>jutyityitiytuiyliyoluiulio</p>
@@ -37,48 +40,48 @@
                 <!--specialties-->
                 <div class="col-8 mt-5">
                     <div class="row mb-3">
-                     <div class="col-4 bg-info">
-                     <i></i>
+                     <div class="col-4 card-spec">
+                        <i class="fa-solid fa-phone"></i>
                      <h2>Mobile Apps</h2>
                      <h2>Design</h2>
                      </div>
                      <!--End info 1-->
-                     <div class="col-4 bg-primary">
-                        <i></i>
+                     <div class="col-4  card-spec">
+                        <i class="fa-solid fa-laptop"></i>
                         <h2>UI/UX</h2>
                         <h2>Design</h2>
                         </div>
                         <!--End info 1-->
-                        <div class="col-4 bg-warning">
-                            <i></i>
+                        <div class="col-4 card-spec">
+                            <i class="fa-solid fa-filter"></i>
                             <h2>Motion</h2>
                             <h2>Design</h2>
                             </div>
                             <!--End info 1-->
                     </div>
                     <div class="row">
-                        <div class="col-4 bg-info">
-                        <i></i>
+                        <div class="col-4 card-spec">
+                            <i class="fa-solid fa-phone"></i>
                         <h2>Mobile Apps</h2>
                         <h2>Design</h2>
                         </div>
                         <!--End info 1-->
-                        <div class="col-4 bg-primary">
-                           <i></i>
+                        <div class="col-4 card-spec">
+                            <i class="fa-solid fa-laptop"></i>
                            <h2>UI/UX</h2>
                            <h2>Design</h2>
                            </div>
                            <!--End info 1-->
-                           <div class="col-4 bg-warning">
-                               <i></i>
+                           <div class="col-4 card-spec">
+                            <i class="fa-solid fa-filter"></i>
                                <h2>Motion</h2>
                                <h2>Design</h2>
                                </div>
                                <!--End info 1-->
                        </div>
                 </div>
-                <div class="col-4 bg-danger mt-5">
-                    <h6>Say Hello!</h6>
+                <div class="col-4 card-contact mt-5">
+                    <h6 class="sous-titre1">Say Hello!</h6>
                     <h2>Contact@hapt.tn</h2>
                 </div>
                 
